 * Various performance and RAM usage improvements.
 * The source distribution can now be compiled for RISC-V 64 systems thanks to
   @aimixsaka.
 * New presets: Analog Brass AT, Analog Brass mod, Bouncy.
 * All parameters and features are now explained in detail in the
   documentation.
 * FST: hosts which support VSTXML files can now show full length parameter
   names instead of abbreviations.
 * Bugfix: some MIDI devices send Note Off messages as Note On messages with 0
   velocity. These messages were misinterpreted, but now they will be handled
   correctly.
 * Bugfix: neither the FST nor the VST 3 plugin notified the host when a
   parameter was changed or a patch was loaded from file, so the host wouldn't
   ask the user when exiting whether to write unsaved changes to disk, and the
   undo history wasn't updated either. Now both plugin types will notify the
   host when something is changed on JS80P's user interface.
 * Bugfix: dynamic envelope parameter changes could produce glitches, sudden
   jumps, and some sections of the envelope could get lost, especially in
   monophonic mode.
 * Bugfix: decayed notes were not garbage collected when envelopes were
   assigned only to the amplitude parameter of the oscillators, but not to
   the first oscillator's subharmonic amplitude which was left at the default 0
   setting. (E.g. the Bells 1 and 2 presets while holding the sustain pedal.)
 * Bugfix: the FST plugin will no longer crash if it is loaded in a host which
   does not supply a host-callback. (Hosts like that are probably rare, and
   features like tempo-synchronization cannot work in such hosts.)

v2.9.0 (2024-04-26)
 * Preview version of v3.0.0, not ready for production use.

v2.4.4 (2023-11-19)
 * Reduced RAM usage.
 * Bugfix: hosts that use variable length rendering blocks could cause JS80P in
   some circumstance to leave garbage in the buffers of delay based effects
   when they decayed into silence, which (depending on the settings of the